--- a/product/roundhouse.databases.ravendb/roundhouse.databases.ravendb.csproj
+++ b/product/roundhouse.databases.ravendb/roundhouse.databases.ravendb.csproj
@@ -51,9 +51,11 @@
     <Compile Include="commands\RavenPatchCommand.cs" />
     <Compile Include="commands\RavenPostCommand.cs" />
     <Compile Include="commands\RavenPutCommand.cs" />
-    <Compile Include="models\versionModel.cs" />
+    <Compile Include="models\VersionModel.cs" />
     <Compile Include="RavenDatabase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="serializers\ISerializer.cs" />
+    <Compile Include="serializers\JsonSerializer.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\roundhouse\roundhouse.csproj">
