--- a/product/roundhouse.databases.ravendb/roundhouse.databases.ravendb.csproj
+++ b/product/roundhouse.databases.ravendb/roundhouse.databases.ravendb.csproj
@@ -50,7 +50,7 @@
     <Compile Include="commands\RavenPatchCommand.cs" />
     <Compile Include="commands\RavenPostCommand.cs" />
     <Compile Include="commands\RavenPutCommand.cs" />
-    <Compile Include="models\VersionModel.cs" />
+    <Compile Include="models\VersionDocument.cs" />
     <Compile Include="RavenDatabase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="serializers\ISerializer.cs" />
