--- a/product/roundhouse.tests/roundhouse.tests.csproj
+++ b/product/roundhouse.tests/roundhouse.tests.csproj
@@ -105,6 +105,8 @@
     <Compile Include="..\..\SolutionVersion.cs">
       <Link>Properties\SolutionVersion.cs</Link>
     </Compile>
+    <Compile Include="databases\ravendb\commands\RavenCommandFactoryTestFixture.cs" />
+    <Compile Include="databases\ravendb\RavenDatabaseTestFixture.cs" />
     <Compile Include="databases\SqlServerDatabaseSpecs.cs" />
     <Compile Include="EmptyTestContainer.cs" />
     <Compile Include="cryptography\CryptographicServiceSpecs.cs" />
@@ -133,6 +135,10 @@
     <ProjectReference Include="..\roundhouse.databases.oracle\roundhouse.databases.oracle.csproj">
       <Project>{3828D379-C96A-49C8-8BC9-0182CC8C55B1}</Project>
       <Name>roundhouse.databases.oracle</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\roundhouse.databases.ravendb\roundhouse.databases.ravendb.csproj">
+      <Project>{57ead027-d5c6-4f81-b4ec-4da926471ca2}</Project>
+      <Name>roundhouse.databases.ravendb</Name>
     </ProjectReference>
     <ProjectReference Include="..\roundhouse.databases.sqlserver\roundhouse.databases.sqlserver.csproj">
       <Project>{F02B7642-3EC4-4374-BBBE-7857A93EA5D9}</Project>
