--- a/product/roundhouse.databases.ravendb/roundhouse.databases.ravendb.csproj
+++ b/product/roundhouse.databases.ravendb/roundhouse.databases.ravendb.csproj
@@ -50,11 +50,11 @@
     <Compile Include="commands\RavenPatchCommand.cs" />
     <Compile Include="commands\RavenPostCommand.cs" />
     <Compile Include="commands\RavenPutCommand.cs" />
-    <Compile Include="models\VersionDocument.cs" />
     <Compile Include="RavenDatabase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="serializers\ISerializer.cs" />
     <Compile Include="serializers\JsonSerializer.cs" />
+    <Compile Include="model\Versions.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\roundhouse\roundhouse.csproj">
@@ -65,6 +65,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
