Use git repo for versioning rather than SVN.

--- a/Settings/UppercuT.config
+++ b/Settings/UppercuT.config
@@ -6,7 +6,7 @@
   <!-- Required Items -->
   <property name="project.name" value="RoundhousE" overwrite="false" />
   <property name="path_to_solution" value="." overwrite="false" />
-  <property name="repository.path" value="http://roundhouse.googlecode.com/svn" overwrite="false" />
+  <property name="repository.path" value="https://github.com/chucknorris/roundhouse.git" overwrite="false" />
   <property name="company.name" value="FerventCoder Software" overwrite="false" />
   
   <!-- folders -->
@@ -32,7 +32,7 @@
   <!-- test.framework: none, mbunit2, nunit, xunit, gallio - with gallio it must be installed in program files on every computer. Alternatively you can add 26MB to your repo and put it there. Little much for my tastes. -->
   <property name="test.framework" value="mbunit2" overwrite="false" />
   <!-- source_control_type: svn, vss, tfs, vault, git, hg -->
-  <property name="source_control_type" value="svn" overwrite="false" />
+  <property name="source_control_type" value="git" overwrite="false" />
   
   <!-- Environment specific variables -->
   <property name="path.separator" value="${string::trim(path::combine(' ', ' '))}" />
