Switch from SVN to Git for the official repository.

--- a/nuget/roundhouse/roundhouse.nuspec
+++ b/nuget/roundhouse/roundhouse.nuspec
@@ -12,6 +12,6 @@
     <licenseUrl>http://www.apache.org/licenses/LICENSE-2.0</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <tags>roundhouse db migrations chocolatey chucknorris</tags>
-    <iconUrl>http://roundhouse.googlecode.com/svn/trunk/nuget/RoundhousE_Logo.NuGet.jpg</iconUrl>
+	<iconUrl>https://raw.github.com/chucknorris/roundhouse/master/nuget/RoundhousE_Logo.NuGet.jpg</iconUrl>
   </metadata>
 </package>
