--- a/Settings/UppercuT.config
+++ b/Settings/UppercuT.config
@@ -34,6 +34,9 @@
   <!-- source_control_type: svn, vss, tfs, vault, git, hg -->
   <property name="source_control_type" value="git" overwrite="false" />
   
+  <!-- cover.framework: none, ncover, opencover -->
+  <property name="cover.framework" value="opencover" overwrite="false" />
+
   <!-- Environment specific variables -->
   <property name="path.separator" value="${string::trim(path::combine(' ', ' '))}" />
   
@@ -41,9 +44,11 @@
   <property name="version.use_semanticversioning" value="true" overwrite="false" />
   <property name="version.major" value="0" overwrite="false" />
   <property name="version.minor" value="8" overwrite="false" />
-  <property name="version.patch" value="5" overwrite="false" />
+  <property name="version.patch" value="6" overwrite="false" />
   <property name="version.gem.suffix" value="" overwrite="false" />
   <property name="use.gem.build_date" value="false" overwrite="false" />
+  <property name="version.nuget.prerelease" value="alpha1" overwrite="false" />
+  <property name="version.use.build_date" value="true" overwrite="false" />
   <property name="assembly.description" value="${project.name} is a product of ${company.name} - ${repository.path}." overwrite="false" />
   <property name="assembly.clscompliant" value="true" overwrite="false" />
   <!-- partially trusted callers doesn't set correctly with assembly generator - Leave false for now-->
@@ -70,7 +75,8 @@
   <!-- These are run two folders down from the top level folder, so figure out the relative path from there and add "..\..\" -->
   <!-- In example, if from the top level directory, you have an item that is in lib\NCover\NCover.Console.exe you should add it here as ..\..\lib\NCover\NCover.Console.exe  -->
   <!-- To not use the tool, change to a location that doesn't exist -->
-  <property name="app.nunit.console" value="..${path.separator}..${path.separator}${folder.references}${path.separator}NUnit${path.separator}nunit-console.exe" overwrite="false" />
+  <property name="app.nunit.console" value="..${path.separator}..${path.separator}${folder.references}${path.separator}NUnit${path.separator}nunit-console.exe" overwrite="false" if="${platform::is-windows()}" />
+  <property name="app.nunit.console" value="nunit-console" overwrite="false" if="${platform::is-unix()}"/>
   <property name="app.xunit.console" value="..${path.separator}..${path.separator}${folder.references}${path.separator}xUnit${path.separator}xunit.console.clr4.exe" overwrite="false" />
   <property name="app.storevil.console" value="..${path.separator}..${path.separator}${folder.references}${path.separator}StorEvil${path.separator}StorEvil.exe" overwrite="false" />
   <property name="app.ncover" value="..${path.separator}..${path.separator}${folder.references}${path.separator}NCover${path.separator}NCover.Console.exe" overwrite="false" />
@@ -79,8 +85,14 @@
   <property name="app.ncover.tester" value="${app.nunit.console}" overwrite="false" if="${test.framework=='nunit'}" />
   <property name="app.ncover.tester" value="${app.xunit.console}" overwrite="false" if="${test.framework=='xunit'}" />
   <property name="app.ncover.tester" value="${path::get-full-path(folder.program_files)}${path.separator}Gallio${path.separator}bin${path.separator}Gallio.Host.exe" overwrite="false" if="${test.framework=='gallio'}" />
+  <property name="app.opencover" value="..${path.separator}..${path.separator}${folder.references}${path.separator}OpenCover${path.separator}OpenCover.Console.exe" overwrite="false" />
+  <property name="app.opencover.tester" value="${app.nunit.console}" overwrite="false" if="${test.framework=='nunit'}" />
+  <property name="app.opencover.tester" value="${app.xunit.console}" overwrite="false" if="${test.framework=='xunit'}" />
+  <property name="app.opencover.tester" value="${path::get-full-path(folder.program_files)}${path.separator}Gallio${path.separator}bin${path.separator}Gallio.Host.exe" overwrite="false" if="${test.framework=='gallio'}" />
   <property name="app.ndepend" value="${path::get-full-path(folder.program_files)}${path.separator}NDepend${path.separator}NDepend.Console.exe" overwrite="false" />
   <property name="app.metric" value="${path::get-full-path(folder.program_files)}${path.separator}Microsoft Visual Studio 10.0${path.separator}Team Tools${path.separator}Static Analysis Tools${path.separator}FxCop${path.separator}Metrics.exe" overwrite="false" />
+  <property name="app.fxcop" value="${path::get-full-path(folder.program_files)}${path.separator}Microsoft Visual Studio 10.0${path.separator}Team Tools${path.separator}Static Analysis Tools${path.separator}FxCop${path.separator}FxCopCmd.exe" />
+  <property name="app.fxcop" value="${path::get-full-path(folder.program_files)}${path.separator}Microsoft Fxcop 10.0${path.separator}FxCopCmd.exe" if="${not file::exists(app.fxcop)}" />
   <property name="app.moma" value="..${path.separator}..${path.separator}${folder.references}${path.separator}MoMA${path.separator}MoMA.exe" overwrite="false" />
   <property name="app.nitriq" value="Nitriq.Console.exe" overwrite="false" />
   <property name="app.xbuild" value="${path::get-full-path(folder.program_files)}${path.separator}Mono-2.8${path.separator}bin${path.separator}xbuild.bat" overwrite="false" />
