--- a/product/roundhouse.tests.integration/packages.config
+++ b/product/roundhouse.tests.integration/packages.config
@@ -4,5 +4,6 @@
   <package id="Iesi.Collections" version="3.2.0.4000" />
   <package id="log4net" version="1.2.10" />
   <package id="NHibernate" version="3.2.0.4000" />
+  <package id="NUnit" version="2.6.2" targetFramework="net35" />
   <package id="RhinoMocks" version="3.6" />
 </packages>
