--- a/product/roundhouse.console/app.config
+++ b/product/roundhouse.console/app.config
@@ -6,6 +6,10 @@
         <assemblyIdentity name="NHibernate" publicKeyToken="aa95f207798dfdb4" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.3.1.4000" newVersion="3.3.1.4000" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Oracle.DataAccess" publicKeyToken="89b483f429c47342" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.112.3.0" newVersion="2.112.3.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
