--- a/nuget/roundhouse/roundhouse.nuspec
+++ b/nuget/roundhouse/roundhouse.nuspec
@@ -11,7 +11,7 @@
     <projectUrl>http://projectroundhouse.org</projectUrl>
     <licenseUrl>http://www.apache.org/licenses/LICENSE-2.0</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <tags>roundhouse db migrations chocolatey chucknorris</tags>
+    <tags>roundhouse db migration database migrator chucknorris</tags>
 	<iconUrl>https://raw.github.com/chucknorris/roundhouse/master/nuget/RoundhousE_Logo.NuGet.jpg</iconUrl>
   </metadata>
 </package>
