DryRunDecorator refactored into separate class
To facilitate --baseline implementation MockDatabase has been splitted
into 2 and classes (basic transparent proxy and actual DryRun decorator)

--- a/product/roundhouse/roundhouse.csproj
+++ b/product/roundhouse/roundhouse.csproj
@@ -107,6 +107,7 @@
     <Compile Include="connections\IConnection.cs" />
     <Compile Include="consoles\CommandExecutor.cs" />
     <Compile Include="consoles\InteractivePrompt.cs" />
+    <Compile Include="databases\DatabaseDryRunDecorator.cs" />
     <Compile Include="databases\RecoveryMode.cs" />
     <Compile Include="infrastructure.app\ConnectionType.cs" />
     <Compile Include="databases\DefaultDatabase.cs" />
