--- a/product/roundhouse/roundhouse.csproj
+++ b/product/roundhouse/roundhouse.csproj
@@ -107,8 +107,8 @@
     <Compile Include="connections\IConnection.cs" />
     <Compile Include="consoles\CommandExecutor.cs" />
     <Compile Include="consoles\InteractivePrompt.cs" />
-    <Compile Include="databases\DatabaseBaselineDecorator.cs" />
-    <Compile Include="databases\DatabaseDryRunDecorator.cs" />
+    <Compile Include="databases\BaselineModeDatabase.cs" />
+    <Compile Include="databases\DryRunDatabase.cs" />
     <Compile Include="databases\RecoveryMode.cs" />
     <Compile Include="infrastructure.app\ConnectionType.cs" />
     <Compile Include="databases\DefaultDatabase.cs" />
