nspec mssql test prototype

--- a/product/roundhouse.tests.integration/packages.config
+++ b/product/roundhouse.tests.integration/packages.config
@@ -4,5 +4,6 @@
   <package id="Iesi.Collections" version="3.3.2.4000" targetFramework="net35" />
   <package id="log4net" version="2.0.0" targetFramework="net35" />
   <package id="NHibernate" version="3.3.2.4000" targetFramework="net35" />
+  <package id="nspec" version="0.9.67" targetFramework="net35" />
   <package id="RhinoMocks" version="3.6.1" targetFramework="net35" />
 </packages>
