--- a/product/roundhouse.tests/packages.config
+++ b/product/roundhouse.tests/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="log4net" version="2.0.0" targetFramework="net35" />
+  <package id="log4net" version="2.0.2" targetFramework="net40" />
   <package id="RhinoMocks" version="3.6.1" targetFramework="net35" />
-  <package id="structuremap" version="2.6.3" />
+  <package id="structuremap" version="2.6.4.1" targetFramework="net40" />
 </packages>
