--- a/product/roundhouse/packages.config
+++ b/product/roundhouse/packages.config
@@ -2,8 +2,8 @@
 <packages>
   <package id="FluentNHibernate" version="1.3.0.733" targetFramework="net35" />
   <package id="Iesi.Collections" version="3.3.2.4000" targetFramework="net35" />
-  <package id="log4net" version="2.0.0" targetFramework="net35" />
-  <package id="NHibernate" version="3.3.2.4000" targetFramework="net35" />
-  <package id="PublishedApplications" version="2.1.0.0" targetFramework="net35" />
-  <package id="structuremap" version="2.6.3" />
+  <package id="log4net" version="2.0.2" targetFramework="net40" />
+  <package id="NHibernate" version="3.3.3.4001" targetFramework="net40" />
+  <package id="PublishedApplications" version="2.3.0.0" targetFramework="net40" />
+  <package id="structuremap" version="2.6.4.1" targetFramework="net40" />
 </packages>
