Refactor the use of our own MD5 Implementation
There are subsequent pull requests that expect the Md5CryptographicService to exit. Rather than rename that file (from a P/R), a better approach is to separate the MD5 implementation into it's own
file, then restore the MD5Service and just have it change the algorithm it uses.

--- a/product/roundhouse/roundhouse.csproj
+++ b/product/roundhouse/roundhouse.csproj
@@ -111,6 +111,7 @@
     <Compile Include="connections\IConnection.cs" />
     <Compile Include="consoles\CommandExecutor.cs" />
     <Compile Include="consoles\InteractivePrompt.cs" />
+    <Compile Include="cryptography\LocalMD5Implementation.cs" />
     <Compile Include="databases\RecoveryMode.cs" />
     <Compile Include="infrastructure.app\ConnectionType.cs" />
     <Compile Include="databases\DefaultDatabase.cs" />
@@ -146,7 +147,7 @@
     <Compile Include="sqlsplitters\StatementSplitter.cs" />
     <Compile Include="consoles\DefaultConfiguration.cs" />
     <Compile Include="cryptography\CryptographicService.cs" />
-    <Compile Include="cryptography\ManagedMD5CryptographicService.cs" />
+    <Compile Include="cryptography\MD5CryptographicService.cs" />
     <Compile Include="databases\AdoNetDatabase.cs" />
     <Compile Include="environments\DefaultEnvironment.cs" />
     <Compile Include="environments\Environment.cs" />
