--- a/product/roundhouse.databases.sqlserverce/packages.config
+++ b/product/roundhouse.databases.sqlserverce/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="FluentNHibernate" version="1.3.0.733" targetFramework="net45" />
   <package id="Iesi.Collections" version="3.2.0.4000" targetFramework="net45" />
+  <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net45" />
   <package id="NHibernate" version="3.3.1.4000" targetFramework="net45" />
 </packages>
