--- a/product/roundhouse.databases.sqlserverce/roundhouse.databases.sqlserverce.csproj
+++ b/product/roundhouse.databases.sqlserverce/roundhouse.databases.sqlserverce.csproj
@@ -1,11 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
   <PropertyGroup>
     <TargetFramework>net461</TargetFramework>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <OutputType>Library</OutputType>
     <OutputType>Library</OutputType>
     <RootNamespace>roundhouse.databases.sqlserverce</RootNamespace>
     <AssemblyName>roundhouse.databases.sqlserverce</AssemblyName>
@@ -48,15 +47,14 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-   <Compile Include="..\..\SolutionVersion.cs">
+    <Compile Include="..\..\SolutionVersion.cs">
       <Link>Properties\SolutionVersion.cs</Link>
     </Compile>
   </ItemGroup>
-   <ItemGroup>
+  <ItemGroup>
     <PackageReference Include="FluentNHibernate" Version="1.3.0.733" />
     <PackageReference Include="Iesi.Collections" Version="3.3.2.4000" />
     <PackageReference Include="Microsoft.SqlServer.Compact" Version="4.0.8876.1" />
@@ -65,5 +63,4 @@
   <ItemGroup>
     <ProjectReference Include="..\roundhouse\roundhouse.csproj" />
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
